--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -85,7 +85,7 @@
 
 
 
-                      <input type='button' ng-click='remove(x.id);' value='Delete'></td>
+                      <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
                   </tr>
                 </div>
               </table>
@@ -195,18 +195,18 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {task:item,request_type:2},
   }).then(function successCallback(response) {
-    $scope.items = response.data;
+   $scope.items.push(response.data[0]);
 
   });
  }
 
  // Remove record
- $scope.remove = function(id){
+ $scope.remove = function(index,itemid){
 
   $http({
    method: 'post',
    url: 'addremove.php',
-   data: {items:id,request_type:3},
+   data: {itemid:itemid,request_type:3},
   }).then(function successCallback(response) {
    $scope.items.splice(index, 1);
   });
