--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -195,7 +195,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {task:item,request_type:2},
   }).then(function successCallback(response) {
-   $scope.items.push(response.data[0]);
+  $scope.items = response.data;
 
   });
  }
@@ -208,7 +208,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {itemid:itemid,request_type:3},
   }).then(function successCallback(response) {
-   $scope.items.splice(index, 1);
+   $scope.items = response.data;
   });
  }
 
@@ -219,7 +219,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {task:$scope.task,request_type:4},
   }).then(function successCallback(response) {
-   $scope.items.push(response.data[0]);
+   $scope.items = response.data;
   });
  }
 
@@ -230,7 +230,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {task:$scope.task,request_type:5},
   }).then(function successCallback(response) {
-   $scope.items.push(response.data[0]);
+   $scope.items = response.data;
   });
  }
 
@@ -241,7 +241,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {task:$scope.task,request_type:6},
   }).then(function successCallback(response) {
-   $scope.items.push(response.data[0]);
+   $scope.items = response.data;
   });
  }
 
@@ -253,7 +253,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
    url: 'addremove.php',
    data: {task:$scope.task,request_type:7},
   }).then(function successCallback(response) {
-   $scope.items.push(response.data[0]);
+   $scope.items = response.data;
   });
  }
 
