--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -239,7 +239,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
   $http({
    method: 'post',
    url: 'addremove.php',
-   data: {task:$scope.task,request_type:6},
+   data: {itemid:itemid,request_type:6},
   }).then(function successCallback(response) {
    $scope.items.push(response.data[0]);
   });
@@ -251,7 +251,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
   $http({
    method: 'post',
    url: 'addremove.php',
-   data: {task:$scope.task,request_type:7},
+   data: {itemid:itemid,request_type:7},
   }).then(function successCallback(response) {
    $scope.items.push(response.data[0]);
   });
