--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -85,7 +85,7 @@
 
 
 
-                      <input type='button' ng-click='remove($index,task.item.id);' value='Delete'></td>
+                      <input type='button' ng-click='remove($index,item.id);' value='Delete'></td>
                   </tr>
                 </div>
               </table>
@@ -126,7 +126,7 @@
                               <div class="form-group">
                                 <input type="text" class="form-control" ng-model="x.complete" value="{{x.complete}}">
                               </div>
-                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="updateC($index,complete.item.id)">Update</button>
+                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="updateC($index,item.id)">Update</button>
 
 
                             </div>
@@ -135,7 +135,7 @@
                         </div>
                       </div>
 
-                     </a> <input type='button' ng-click='remove($index,task.item.id);' value='Delete'>
+                     </a> <input type='button' ng-click='remove($index,item.id);' value='Delete'>
 
                     </td>
                   </tr>
