--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -105,7 +105,7 @@
             <p class="card-text">
               <table>
                 <div>
-                  <tr ng-repeat="x in items">
+                  <tr ng-repeat="x in items | filter:{items:'!'} track by $index ">
                     <td><input type='button' id='but_save' value='Add Incomplete' ng-click="addI($index,task.item.id)" > {{ x.complete }}
 
 
@@ -212,6 +212,9 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
   });
  }
 
+
+
+//to be done
  // Add to completed
  $scope.addC = function(index,itemid){
   $http({
