--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -135,7 +135,7 @@
                         </div>
                       </div>
 
-                     </a> <input type='button' ng-click='remove($index,item.id);' value='Delete'>
+                    </a> <input type='button' ng-click='remove($index,x.id);' value='Delete'>
 
                     </td>
                   </tr>
