--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -106,7 +106,7 @@
               <table>
                 <div>
                   <tr ng-repeat="x in items | filter : {complete:'1'}">
-                    <td><input type='button' id='but_save' value='Add Incomplete' ng-click="addI($index,x.id)" > {{ x.complete }}
+                    <td><input type='button' id='but_save' value='Add Incomplete' ng-click="addI($index,x.id)" > {{ x.task }}
 
 
                       <!-- Trigger the modal with a button -->
