--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -72,7 +72,7 @@
                             <div class="modal-body">
 
                               <div class="form-group">
-                                <input type="text" class="form-control" ng-model="newtask" value="{{x.task}}">
+                                <input type="text" class="form-control" ng-model="x.task" value="{{x.task}}">
                               </div>
                               <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update($index,x.task)">Update</button>
 
@@ -124,9 +124,9 @@
                             <div class="modal-body">
 
                               <div class="form-group">
-                                <input type="text" class="form-control" ng-model="newtask" value="{{ x.task }}">
+                                <input type="text" class="form-control" ng-model="x.task" value="{{x.task}}">
                               </div>
-                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update($index,newtask)">Update</button>
+                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update($index,x.task)">Update</button>
 
 
                             </div>
