--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -72,7 +72,7 @@
                             <div class="modal-body">
 
                               <div class="form-group">
-                                <input type="text" class="form-control" ng-model="x.task" value="{{x.task[1]}}">
+                                <input type="text" class="form-control" ng-model="x.task">
                               </div>
                               <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update(x.id,x.task)">Update</button>
 
