--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -110,10 +110,10 @@
 
 
                       <!-- Trigger the modal with a button -->
-                      <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
+                      <button type="button"  data-toggle="modal" data-target="#myModal2">Edit</button>
 
                       <!-- Modal -->
-                      <div id="myModal" class="modal fade" role="dialog">
+                      <div id="myModal2" class="modal fade" role="dialog">
                         <div class="modal-dialog">
 
                           <!-- Modal content-->
