--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -58,10 +58,10 @@
 
 
                       <!-- Trigger the modal with a button -->
-                      <button type="button"  data-toggle="modal" data-target="#myModal">Edit</button>
+                      <button type="button"  data-toggle="modal" data-target="#myModal{{$index}}">Edit</button>
 
                       <!-- Modal -->
-                      <div id="myModal" class="modal fade" role="dialog">
+                      <div id="myModal{{$index}}" class="modal fade" role="dialog">
                         <div class="modal-dialog">
 
                           <!-- Modal content-->
@@ -124,7 +124,7 @@
                             <div class="modal-body">
 
                               <div class="form-group">
-                                <input type="text" class="form-control" ng-model="x.task" value="{{x.task}}">
+                                <input type="text" class="form-control" value="{{x.task}}">
                               </div>
                               <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update(x.id,x.task)">Update</button>
 
