--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -72,7 +72,7 @@
                             <div class="modal-body">
 
                               <div class="form-group">
-                                <input type="text" class="form-control"  value="{{x.task}}">
+                                <input type="text" class="form-control"  ng-model="{{x.task}}">
                               </div>
                               <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update(x.id,x.task)">Update</button>
 
@@ -110,10 +110,10 @@
 
 
                       <!-- Trigger the modal with a button -->
-                      <button type="button"  data-toggle="modal" data-target="#myModal2">Edit</button>
+                      <button type="button"  data-toggle="modal" data-target="#myModal2{{$index}}">Edit</button>
 
                       <!-- Modal -->
-                      <div id="myModal2" class="modal fade" role="dialog">
+                      <div id="myModal2{{$index}}" class="modal fade" role="dialog">
                         <div class="modal-dialog">
 
                           <!-- Modal content-->
