--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -74,7 +74,7 @@
                               <div class="form-group">
                                 <input type="text" class="form-control"  value="{{x.task}}">
                               </div>
-                              <button class="btn btn-warning" ng-disabled="empList.$invalid" onclick="update(x.id,x.task)">Update</button>
+                              <button class="btn btn-warning" ng-disabled="empList.$invalid" onclick="update(2,"go")">Update</button>
 
 
                             </div>
@@ -229,11 +229,11 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
  }
 
 //update task
- $scope.update = function(index,item){
+ $scope.update = function(taskid,item){
   $http({
    method: 'post',
    url: 'addremove.php',
-   data: {id:index,task:item,request_type:6},
+   data: {id:taskid,task:item,request_type:6},
   }).then(function successCallback(response) {
    $scope.items.push(response.data[0]);
   });
