--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -74,7 +74,7 @@
                               <div class="form-group">
                                 <input type="text" class="form-control"  value="{{x.task}}">
                               </div>
-                              <button class="btn btn-warning" ng-disabled="empList.$invalid" onclick="update({{x.id}},{{x.task}})">Update</button>
+                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update(x.id,x.task)">Update</button>
 
 
                             </div>
