--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -74,7 +74,7 @@
                               <div class="form-group">
                                 <input type="text" class="form-control"  ng-model="x.task">
                               </div>
-                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update({{x.id}},{{x.task}})">Update</button>
+                              <button class="btn btn-warning" ng-disabled="empList.$invalid" ng-click="update(x.id,x.task)">Update</button>
 
 
                             </div>
@@ -233,7 +233,7 @@ app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
   $http({
    method: 'post',
    url: 'addremove.php',
-   data: {id:63,task:"hrllo",request_type:6},
+   data: {id:taskid,task:item,request_type:6},
   }).then(function successCallback(response) {
    $scope.items.push(response.data[0]);
   });
