--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -38,7 +38,9 @@
         </div>
       </div>
 
+    </div>
 
+      <div class="row">
         <!-- incomplete part of list card -->
         <div class=" col-md-4">
             <div class="card">
@@ -86,6 +88,10 @@
           </div>
         </div>
       </div><!--end incomplete card-->
+
+    </div>
+
+      <div class="row">
 
         <!-- Completed part of list card-->
         <div class=" col-md-4">
