--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -26,7 +26,7 @@
         <div class=" col-md-4">
             <div class="card">
           <div class="card-body">
-            <h5 class="card-title">To Do List</h5>
+            <h5 class="card-title">Add to List</h5>
             <p class="card-text">
               <div>
                 <input type='text' id='txt' ng-model='item'>
