--- a/bootstrap/example/starter-template/todolist.html
+++ b/bootstrap/example/starter-template/todolist.html
@@ -162,7 +162,7 @@ let app = angular.module("myApp", []);
 
 app.controller('itemCtrl', ['$scope', '$http', function ($scope, $http) {
 
- $http.get("addremove.php")
+ $http.POST("addremove.php")
     .then(function(response) {
         $scope.items = response.data;
     });
